@startuml

title __MAINBODY's Class Diagram__\n

  namespace com.Model.MainBody {
    class com.Model.MainBody.Instructor {
        - address : String
        - email : String
        - instructorId : int
        - instructorName : String
        - modules : String[]
        + Instructor()
        + Instructor()
        + assignInstructor()
        + getAddress()
        + getEmail()
        + getInstructorId()
        + getInstructorName()
        + selectInstructors()
        + selectInstructorsModule()
        + selectUpdatedInstructors()
        + selectUpdatedInstructors()
        + setAddress()
        + setEmail()
        + setInstructorId()
        + setInstructorInfo()
        + setInstructorName()
    }
  }
  

  namespace com.Model.MainBody {
    class com.Model.MainBody.Student {
        ~ modulesSelected : ArrayList<Module>
        - address : String
        - course : String
        - eligibleForNextSem : Boolean
        - emailAddress : String
        - level : String
        - remarks : String
        - semester : String
        - studentId : int
        - studentName : String
        + Student()
        + Student()
        + getAddress()
        + getCourse()
        + getEligibleForNextSem()
        + getEmailAddress()
        + getLevel()
        + getRemarks()
        + getStudentId()
        + getStudentModule()
        + getStudentName()
        + noOfStudents()
        + selectRemark()
        + selectStudent()
        + selectStudentDetails()
        + selectStudentId()
        + selectStudentName()
        + selectStudentsId()
        + setAddress()
        + setCourse()
        + setEligibleForNextSem()
        + setEmailAddress()
        + setLevel()
        + setRemarks()
        + setStudentInfo()
        + setStudentName()
    }
  }
  

  namespace com.Model.MainBody {
    class com.Model.MainBody.Users {
        - con : Connection
        - userId : String
        - userPassword : String
        - userType : String
        + GenerateID()
        + getUserId()
        + getUserPassword()
        + getUserType()
        + setUserId()
        + setUserPassword()
        + setUserType()
        + users()
    }
  }
  

  com.Model.MainBody.Instructor -up-|> com.Model.MainBody.Users
  com.Model.MainBody.Instructor o-- com.Controller.ManageDbUtils : manageDbUtils
  com.Model.MainBody.Student -up-|> com.Model.MainBody.Users
  com.Model.MainBody.Student o-- com.Controller.ManageDbUtils : manageDbUtils


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
